# docs/swagger.json
@@ -399,6 +399,30 @@
                 }
             }
         },
+        "/students/": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Students",
+                    "_ By admin",
+                    "_ By teacher"
+                ],
+                "summary": "Get all students",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/auth.UserGet"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/teachers/": {
             "get": {
                 "consumes": [
